
    o   Better error messages in case of NAs in the response variable for 
        ANOVAs and mixed models.

    Bugfixes

    o   objects estimated with mixed(..., all_fit = TRUE) should now work
        again with emmeans.
        
    o   afex_plot() works with mixed models estimated with mixed(..., type = 2) 
        (i.e., mixed models with Type II sums of squares).


                    *************************
                    ** afex VERSION 0.27-x **
                    *************************
                    
                    Changes in afex Version 0.27-x
                    Released March 2020
                    
    Significant User Visible Changes and New Features
    
    o   p-values are now per default rounded to 3 digits following APA 
        recommendations, thanks to Marius Barth: 
        https://github.com/singmann/afex/issues/81
        To achieve this, a new argument, round_ps, was added to nice() which 
        accepts a rounding function and defaults to round_ps_apa() via 
        afex_options("round_ps"). To reset to the old rounding behaviour, call:
        afex_options(round_ps = round_ps)

    o   New p-value rounding function round_ps_apa().  

    Bugfixes

    o   mixed(): check_contrasts = TRUE now works when the formula is not a 
        formula (but e.g., a character string).
        
    o   Better error message when ANOVA formula does not include an errror term.
    
    o   Should work with both lme4 1.1-22 and later.


                    *************************
                    ** afex VERSION 0.26-x **
                    *************************
                    
                    Changes in afex Version 0.26-x
                    Released January 2020
                    
    Significant User Visible Changes and New Features
    
    o   factor_levels argument of afex_plot() now accepts named character vectors
        which allows: 